[package]
name = "lau-ricci-curvature-agents"
version = "0.1.0"
edition = "2021"
description = "Ollivier-Ricci and Forman-Ricci curvature on agent interaction graphs for fleet topology analysis"
license = "MIT"
repository = "https://github.com/SuperInstance/lau-ricci-curvature-agents"

[dependencies]
nalgebra = { version = "0.33", features = ["serde-serialize"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
approx = "0.5"
